# python_web_hw13_1_REST_API

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  test.db  test.py
docs/source/: conf.py  index.rst
migrations/versions/: 146fae2d2b84_init.py  66dd4555fde3_init.py  706ff142ae05_add_table_args.py  7ea210f0e184_add_confirmed.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1249  16388  16398  16403  16404  2608  5002  pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
src/conf/: config.py  messages.py
src/database/: connect.py  db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cloud_images.py  email.py
templates/: index.html
tests/: conftest.py  data_for_tests.py  test_routes_auth.py  test_routes_contacts.py  test_services_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
